app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require bootstrap
 *= require_self
 *= require_tree .
 */

#flash_notice {
  color: #D15633;
}

#flash_alert {
  color: red;
}

.alert-error {
  color: red;
}

.help-inline {
  padding-left: 7px;
  color: red;
}

.navbar {
  margin-bottom: 0px;
}

.icon-bar {
  background-color: #D15633;
}

button.navbar-toggle {
  background-color: #F0F5FB;
}

a {
 color: #293545;
}

.orange, h2.title {
  color: #D15633;
}

textarea#contact_us_contact_message{
  width: 300px;
  height: 120px;
}

.btn {
  margin-top: 10px;
  margin-bottom: 15px;
}

footer {
  margin: 0px auto;
  text-align: center;
  width: 100%;
}

